--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			<b class="bigger">Bạn Ế ư?</b>
 		</p>
 		<p class="tagline">
-			Đừng lo, có tui<br>bạn vẫn vui bỏ xừ!!! ahihi
+			Đừng lo, có tui<br>bạn vẫn ế bỏ xừ!!! ahihi
 		</p>
 	<div class="button start">Bắt đầu nào</div>
 	</div>
