--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 <div class="container photo-screen" style="display: none">
 	<div class="photo-frame">
 		<div class="photo-container">
-			<img class="crush" src="" ssrc="https://scontent.fsgn5-3.fna.fbcdn.net/v/t1.0-9/82093747_1411127982395761_6877989202231820288_o.jpg?_nc_cat=111&_nc_ohc=yHfqYCBT4hMAQmSgUuD8v0OeQcUznqce8GcBcBOvZhH08lyDqNmU_vsEg&_nc_ht=scontent.fsgn5-3.fna&oh=330e342c46204045944539ef8a96c04f&oe=5EA69D38">
+			<img class="crush" src="" src="https://i.imgur.com/R8NehCA.jpg">
 		</div>
 	</div>
 </div>
